--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "dotenv": "^16.3.1",
-        "openai": "^4.28.0"
+        "openai": "^4.28.0",
+        "puppeteer": "^24.36.1"
     }
 }
